; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/hp/common/extr_sba_iommu.c_sba_unmap_single_attrs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/hp/common/extr_sba_iommu.c_sba_unmap_single_attrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.dma_attrs = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sba_unmap_single_attrs(%struct.device* %0, i32 %1, i64 %2, i32 %3, %struct.dma_attrs* %4) #0 {
  %6 = alloca %struct.device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.dma_attrs*, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.dma_attrs* %4, %struct.dma_attrs** %10, align 8
  %11 = load %struct.device*, %struct.device** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i64, i64* %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load %struct.dma_attrs*, %struct.dma_attrs** %10, align 8
  %16 = call i32 @sba_unmap_page(%struct.device* %11, i32 %12, i64 %13, i32 %14, %struct.dma_attrs* %15)
  ret void
}

declare dso_local i32 @sba_unmap_page(%struct.device*, i32, i64, i32, %struct.dma_attrs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
